--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,8 @@
-<p>
-  welcome works!
-</p>
+<div style="text-align:center">
+  <h4>This application is built with the following services:</h4>
+  <h5>Angular</h5>
+  <h5>Firebase</h5>
+  <h5>Docker</h5>
+  <h5>Heroku</h5>
+  <h6>To sign in, simply visit /login</h6>
+</div>
